--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,9 +13,9 @@ hr
   border: solid 1px $red
   background-color: $white
 .row
-  background-color: yellow
-  border-color: #090909
-  border: solid 1px
+  //background-color: yellow
+  //border-color: #090909
+  //border: solid 1px
 
 
 
