--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,12 +7,12 @@ body
   background-color: $white
 
 hr
-  border-color: #090909
+  border-color: #0e0c1c
 
 .btn
   border: solid 1px $red
   background-color: $white
-.row
+//.row
   //background-color: yellow
   //border-color: #090909
   //border: solid 1px
