--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
 body {
   background-color: white; }
 
+h5, h3 {
+  text-align: center; }
+
 hr {
-  border-color: #090909; }
+  border-color: #0e0c1c; }
+
+textarea {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 100px; }
 
 .btn {
   border: solid 1px #ff4443;
