--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,21 +1,23 @@
 @import "color"
-//*
-  //box-sizing: content-box
-
 
 body
   background-color: $white
-
+h5,h3
+  text-align: center
 hr
   border-color: #0e0c1c
+
+textarea
+  margin-top: 20px
+  margin-bottom: 20px
+
+  width: 100%
+  height: 100px
 
 .btn
   border: solid 1px $red
   background-color: $white
-//.row
-  //background-color: yellow
-  //border-color: #090909
-  //border: solid 1px
+
 
 
 
