--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,9 +1,12 @@
 @import "color"
 
-body
-  background-color: $white
-h5,h3
+h2,h4,h5
   text-align: center
+h2
+  margin-top: 20px
+h2+h4
+  color: #ffaa82
+
 hr
   border-color: #0e0c1c
 
