--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h2 {
   margin-top: 20px; }
 
 h2 + h4 {
-  color: #ffaa82; }
+  color: #855743; }
 
 hr {
   border-color: #0e0c1c; }
@@ -15,6 +15,9 @@ textarea {
   margin-bottom: 20px;
   width: 100%;
   height: 100px; }
+
+#source {
+  height: 180px; }
 
 .btn {
   border: solid 1px #ff4443;
