--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,7 +5,7 @@ h2,h4,h5
 h2
   margin-top: 20px
 h2+h4
-  color: #ffaa82
+  color: #855743
 
 hr
   border-color: #0e0c1c
@@ -13,9 +13,10 @@ hr
 textarea
   margin-top: 20px
   margin-bottom: 20px
-
   width: 100%
   height: 100px
+#source
+  height: 180px
 
 .btn
   border: solid 1px $red
