1.標籤小練習

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ h2 + h4 {
 hr {
   border-color: #0e0c1c; }
 
+label {
+  font-size: xx-large; }
+
 textarea {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -20,5 +23,8 @@ textarea {
   height: 180px; }
 
 .btn {
-  border: solid 1px #ff4443;
+  border: solid 1px #889c47;
   background-color: white; }
+
+#a1:checked ~ label {
+  background-color: #B0095C; }
