--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,9 @@ h2+h4
 hr
   border-color: #0e0c1c
 
+label
+  font-size: xx-large
+
 textarea
   margin-top: 20px
   margin-bottom: 20px
@@ -19,10 +22,9 @@ textarea
   height: 180px
 
 .btn
-  border: solid 1px $red
+  border: solid 1px $green
   background-color: $white
 
-
-
-
-
+#a1
+  &:checked ~ label
+    background-color: #B0095C
